Renames and clean up

--- a/xpensetrail-api/pom.xml
+++ b/xpensetrail-api/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.leratoletsepe</groupId>
-	<artifactId>expense-tracker-api</artifactId>
+	<artifactId>xpensetrail-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>expense-tracker-api</name>
+	<name>xpensetrail-api</name>
 	<description>REST API for tracking expenses, using Java (Spring Boot)</description>
 	<properties>
 		<java.version>11</java.version>
