--- a/expense-tracker-api/src/main/resources/application.properties
+++ b/expense-tracker-api/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgres://localhost:5432/expensetrackerdb
+spring.datasource.username=expensertracker
+spring.datasource.password=password
