--- a/expense-tracker-api/src/main/resources/application.properties
+++ b/expense-tracker-api/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgres://localhost:5432/expensetrackerdb
-spring.datasource.username=expensertracker
+spring.datasource.url= jdbc:postgresql://0.0.0.0:5432/expensetrackerdb
+spring.datasource.username=expensetracker
 spring.datasource.password=password
