--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "tailwind-forms": "^1.0.6",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start", 
-    "build": "craco build", 
+    "start": "craco start",
+    "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +45,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "craco": "^0.0.3",
+    "eslint": "^7.32.0",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
