--- a/xpensetrail-api/src/main/resources/application.properties
+++ b/xpensetrail-api/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url= jdbc:postgresql://0.0.0.0:5432/expensetrackerdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/expensetrackerdb
 spring.datasource.username=expensetracker
 spring.datasource.password=password
